@@ -1,5 +1,10 @@
 # $Id$
 
+2007-02-19	Konstantin V. Arkhipov
+
+	* main/Containers/Unified/UnifiedContainer.class.php: getCount()
+	implemented.
+
 2007-02-16	Konstantin V. Arkhipov
 
 	* main/Flow/HttpRequest.class.php: BC breakage: getAttachedList()
